src/sql.h

typedef unsigned char GoUint8;
typedef GoInt64 GoInt;
typedef __SIZE_TYPE__ GoUintptr;
// GetDBDriverName gets the driver name
//nolint:govet, golint
extern char* GetDBDriverName(GoUintptr utpr);
// DBOpen opens a database specified by its database driver name and a
// driver-specific data source name, usually consisting of at least a
// database name and connection information.
//
// Most users will open a database via a driver-specific connection
// helper function that returns a *DB. No database drivers are included
// in the Go standard library. See https://golang.org/s/sqldrivers for
// a list of third-party drivers.
//
// Open may just validate its arguments without creating a connection
// to the database. To verify that the data source name is valid, call
// Ping.
//
// The returned DB is safe for concurrent use by multiple goroutines
// and maintains its own pool of idle connections. Thus, the Open
// function should be called just once. It is rarely necessary to
// close a DB.
extern GoUintptr DBOpen(char* cDriverName, char* cDataSourceName, GoInt connectionPool);
// Ping verifies a connection to the database is still alive,
// establishing a connection if necessary.
//
// Ping uses context.Background internally; to specify the context, use
// PingContext.
extern GoUint8 Ping(GoUintptr uptr);
// DBClose closes the database and prevents new queries from starting.
// Close then waits for all queries that have started processing on the server
// to finish.
//
// It is rare to Close a DB, as the DB handle is meant to be
// long-lived and shared between many goroutines.
extern GoUint8 DBClose(GoUintptr uptr);
// StmtPrepare creates a prepared statement for later queries or executions.
// Multiple queries or executions may be run concurrently from the
// returned statement.
// The caller must call the statement's Close method
// when the statement is no longer needed.
//
// Prepare uses context.Background internally; to specify the context, use
// PrepareContext.
// func (db *DB) Prepare(query string) (*Stmt, error) {
// 	return db.PrepareContext(context.Background(), query)
// }
extern GoUintptr StmtPrepare(GoUintptr u, char* cQuery);
// GetColumns gets row column's names
//nolint:govet, golint
extern char** GetColumns(GoUintptr uptr);
// GetRow gets row
//nolint:govet, golint
extern char** GetRow(GoUintptr uptr, GoInt i);
// GetTypes gets all row column's types
//nolint:govet, golint
extern char** GetTypes(GoUintptr uptr);
// GetCount get count of query result
//nolint:govet, golint
extern int GetRowsCount(GoUintptr uptr);
// GetCount get count of query result
//nolint:govet, golint
extern int GetColumnCount(GoUintptr uptr);
// QueryExec executes query
extern GoUintptr QueryExec(GoUintptr u, char* cQuery);
// GetTxDriverName is getter method getting DB struct by uintptr
//nolint:govet, golint
extern char* GetTxDriverName(GoUintptr utpr);
// Begin starts a transaction. The default isolation level is dependent on
// the driver.
//
// Begin uses context.Background internally; to specify the context, use
// BeginTx.
extern GoUintptr Begin(GoUintptr u);
// Commit commits the transaction.
extern GoUint8 Commit(GoUintptr uptr);
// Rollback aborts the transaction.
extern GoUint8 Rollback(GoUintptr uptr);
// TxPrepare creates a prepared statement for use within a transaction.
//
// The returned statement operates within the transaction and can no longer
// be used once the transaction has been committed or rolled back.
//
// To use an existing prepared statement on this transaction, see Tx.Stmt.
//
// Prepare uses context.Background internally; to specify the context, use
// PrepareContext.
extern GoUintptr TxPrepare(GoUintptr u, char* cQuery);
// TxQueryExec executes a query that returns rows, typically a SELECT.
//
// Query uses context.Background internally; to specify the context, use
// QueryContext.
extern GoUintptr TxQueryExec(GoUintptr u, char* cQuery);
// StmtExec executes prepare's query
extern GoUintptr StmtExec(GoUintptr u, char* cArgs);